--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "gsap": "^3.12.5",
-    "next": "14.2.12",
+    "next": "^15.1.2",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.14"
